--- a/缠中说禅.md
+++ b/缠中说禅.md
@@ -1,2 +1,2 @@
 * 如果走势必然完美，那么同级别涨跌之间的完美如何实现，中枢失败？
-答:本级别涨跌转折的完美在超级别实现,构成更大级别的中枢或其对应的上涨或下跌
+答:本级别涨跌转折的完美在超级别实现,构成更大级别的中枢或其对应的上涨或下跌,换句话说, 走势必完美是走势必定在某一级别完美,而不是说走势在每一个级别都完美
