--- a/垃圾回收的算法与实现.md
+++ b/垃圾回收的算法与实现.md
@@ -6,10 +6,15 @@
 * 访问的局部性
 
 较大的吞吐量和较短的最大暂停时间不可兼得
-可用的堆越大，GC 运行越快；相反，越想有效地利用有限的堆，GC 花费的时间就越长。
+可用的堆越大，GC 运行越快;
+相反，越想有效地利用有限的堆，GC 花费的时间就越长。
 
 # 2 GC标记-清除算法
 GC 标记 - 清除算法由标记阶段和清除阶段构成。标记阶段是把所有活动对象都做上标记的阶段。清除阶段是把那些没有标记的对象，也就是非活动对象回收的阶段。通过这两个阶段，就可以令不能利用的内存空间重新得到利用。
 
 标记所花费的时间是与 “活动对象的总数” 成正比的, 标记阶段就是 “遍历对象并标记” 的处理过程。
 在 GC 标记 - 清除算法的使用过程中会逐渐产生被细化的分块，不久后就会导致无数的小分块散布在堆的各处。我们称这种状况为碎片化 (fragmentation)。
+
+## 2.6 位图标记
+在单纯的 GC 标记 - 清除算法中，用于标记的位是被分配到各个对象的头中的。也就是说，算法是把对象和头一并处理的。然而之前在 2.3.3 节中也提过，这跟<font color=#fd0209 size=5 >写时复制技术</font>不兼容。
+
