--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -2,7 +2,7 @@
 
 ## 0.2 套接字编程入门--处理多个并发连接, 追求性能
 
-## 0.2.6 单线程, 非阻塞, 事件驱动--使用 select 函数进行轮询
+### 0.2.6 单线程, 非阻塞, 事件驱动--使用 select 函数进行轮询
 
 ```c
 int sock = socket(PF_INET, SOCK_STREAM);
@@ -33,9 +33,9 @@ while (1) {
 }
 ```
 
-## 0.2.7 网络游戏输入输出的特点--单线程, 事件驱动, 非阻塞
+### 0.2.7 网络游戏输入输出的特点--单线程, 事件驱动, 非阻塞
 
-## 0.2.9 充分发挥性能和提高开发效率--从实现语言到底层结构
+### 0.2.9 充分发挥性能和提高开发效率--从实现语言到底层结构
 
 软件性能与开发效率是矛盾的
 
@@ -56,6 +56,15 @@ C/C++ > java > 脚本语言
 
 Go 语言是一种静态的, 本地执行的语言, 它具有垃圾回收机制, 程序员可以在代码的不同部分中选择类型化的强度.
 
-## 0.2.10 发挥多核服务器的性能
+### 0.2.10 发挥多核服务器的性能
 
 在 Linux 上, 平均每个 CPU 内核一秒内可以执行 10 万~20 万次上下文切换.(这里的上下文切换指的是操作系统调度单元的切换)
+
+### 0.2.12 简化服务器实现--libevent
+
+libevent 单线程 + 事件驱动 + 非阻塞调用
+
+libevent 最大的特点就是: 它的工作方式并非创建大量线程然会等待 read 等系统调用, 而是"不创建线程, 为每一个想要事先通知的事件注册回调函数, 当事件发生时, 只进行一次函数调用"
+
+## 0.3 RPC指南--最简单的通信中间件
+
