--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -68,3 +68,75 @@ libevent 最大的特点就是: 它的工作方式并非创建大量线程然会
 
 ## 0.3 RPC指南--最简单的通信中间件
 
+DSL(Domain Specific Language 领域特定语言)
+IDL(Interface Description Language 接口描述语言)
+
+Protocol Buffers
+Thrift
+
+### 0.4.4 游戏编程精粹--不使用线程的"任务系统"
+
+游戏中的许多物体在同一时刻看上去都在各自运动, 但在系统中并没有用多个线程来并行处理.因此游戏一般是按帧来运算的, 用一个或几个定时循环的线程处理事件来表达场景中的所有物体.
+
+### 2.5.2 网络游戏服务运营的3项专门职责
+
+* 开发
+* 运维
+* 销售
+
+## 2.7 支持网络游戏的技术的大类
+
+<p align="left"><font size=2>表 2.2 物理结构上的分类及其性质上的差异</font></p>
+
+|  | C/S | P2P |
+| ------| ------ | ------ |
+| 延迟(所需时间, 通信延迟) | 大 | 小 |
+| 服务器设备成本 | 大 | 小 |
+| 带宽成本 | 根据游戏内容决定 | 根据游戏内容决定 |
+| 非法行为 | 困难 | 容易 |
+
+MMO Massively Multiplayer Online
+MO  Multi-player Online
+
+<p align="left"><font size=2>表 2.3 逻辑结构上的分类及特征</font></p>
+
+|  | MO | MMO |
+| ------| ------ | ------ |
+| 游戏核心 | 少量玩家聚集在一起竞赛 | 大量玩家进行社交活动 |
+| 同时玩家数 | 20 左右 | 200~1000000 |
+| 延迟 | 50 毫秒 | 300 毫秒 |
+| 游戏时间(累积) | 几分钟 | 几年 |
+| RMT(真实货币交易, Real Money Trading) | 很少 | 活跃 |
+| 平台 | 游戏机 | PC, 移动设备 |
+
+网络游戏的4种形式--物理结构 * 逻辑结构
+物理结构有 C/S 和 P2P 两种, 逻辑结构有 MO 和 MMO 两种, 共有四种组合
+
+<p align="left"><font size=2>表 2.4 网络游戏的4种形式及游戏类型</font></p>
+
+|  | MO | MMO |
+| ------| ------ | ------ |
+| C/S | 休闲游戏 | MMORPG 虚拟世界 |
+| P2P | ARPG(动作类 RPG), 对战格斗游戏, FPS, 竞速游戏, RTS, 射击游戏 | N/A |
+
+### 2.8.2 支持网络游戏主体的3大核心
+
+* 游戏的数据形式
+* 游戏的通信方式
+* 游戏的反应速度(延迟)
+显示器每秒进行几十次的画面更新, 这种画面更新时间对玩家来说, 就是游戏状态变化的最短时间间隔
+
+<p align="left"><font size=2>表 2.5 网络延迟与实现方法</font></p>
+
+| 名称 | 延迟 | 同步/异步 | 冗长 | 补充 |
+| ------| ------ | ------ |
+| 同步方式 | 25毫秒以下 | 同步 | 非冗余 | 在高速网络的前提下, 同步方式的实现方法比较好 |
+| 异步方式 | 100毫秒以下 | 非同步 | 冗余 | 为了在低速的网络上实现高速的游戏, 冗余性是必需的 |
+| 浏览器方式 | 300毫秒以下 | 非同步 | 非冗余 | 延迟的程度超出了用冗余性可以解决的范围, 所以将游戏数据和游戏客户端(游戏浏览器)完全分离 |
+
+同步方式是指, 运行在所有游戏玩家设备上的程序是同步的, 只要一个人的网络发生延迟, 后台程序的运行就会变慢, 所有人都会受影响.
+异步方式是指, 各个终端上的游戏进行状态是异步的, 就算某台终端上的程序停止运行, 其他终端的程序也能照常运行, 但是会看到问题终端对应的角色出现卡死
+浏览器方式是指所有游戏内容都运行在后来, 前台只起到显示的作用, 这样即使服务器以外的所有程序都停止运行, 程序也能继续运行, 不会发生数据不匹配.
+
+* 游戏处理的冗余化 --> 解决主数据和副本数据之间的关系
+* 游戏处理的异步化 --> 解决数据变化时同步和异步之间的关系
