--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -139,4 +139,7 @@ MO  Multi-player Online
 浏览器方式是指所有游戏内容都运行在后来, 前台只起到显示的作用, 这样即使服务器以外的所有程序都停止运行, 程序也能继续运行, 不会发生数据不匹配.
 
 * 游戏处理的冗余化 --> 解决主数据和副本数据之间的关系
-* 游戏处理的异步化 --> 解决数据变化时同步和异步之间的关系
+* 游戏处理的异步化 --> 解决数据变化时同步处理(锁)和异步处理之间的关系
+
+### 3.1.2 将数据存放在内存中的理由
+
