--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -124,6 +124,7 @@ MO  Multi-player Online
 * 游戏的数据形式
 * 游戏的通信方式
 * 游戏的反应速度(延迟)
+
 显示器每秒进行几十次的画面更新, 这种画面更新时间对玩家来说, 就是游戏状态变化的最短时间间隔
 
 <p align="left"><font size=2>表 2.5 网络延迟与实现方法</font></p>
@@ -142,4 +143,36 @@ MO  Multi-player Online
 * 游戏处理的异步化 --> 解决数据变化时同步处理(锁)和异步处理之间的关系
 
 ### 3.1.2 将数据存放在内存中的理由
+
+### 3.1.3 每 16 毫秒变化一次--处理的信息及其大小
+
+### 3.1.4 大量对象的显示--CPU 的处理能力
+
+游戏是按帧来处理的, 假设 1 秒钟有 60 帧, CPU 的主频是 1.79 MHz, 那么对于每一帧游戏画面, CPU 大约有 3 万个时钟周期可用(1790000/60 = 29666).
+
+要让游戏世界中的物体移动起来, 必须进行以下处理: 读取坐标, 读取速度, 进行计算, 保存结果. 使用 6502 处理器的命令集处理以上操作需要 2~8 个周期, 假设在效率较高的程序中需要 4 个周期, 而且游戏场景中有 8 个物体, 那么要对二维坐标中 X, Y 两个数据各处理一次, 总共需要 `(4 + 4 + 4 + 4) * 2 * 8 = 256` 个周期, 相对于 CPU 3 万周期的处理能力可谓十分充裕.
+
+接着需要判断己方子弹是否击中了敌人, 假设要对正在飞行的 8 个物体全部进行碰撞检测, 那么就必须进行 `8 * 8 = 64` 次检测, 碰撞检测不能根据两个物体的坐标是否一致来进行判断, 而是必须通过矩形来判断, 所以需要进行二次比较. 因此处理过程如下: 读取坐标, 二次比较, 判断结果. 这次没想处理需要 10 个周期, 又因为要处理 X, Y 坐标, 所以还要翻一倍, 最终需要 `(10 + 10 + 10 + 10) * 2 * (8 * 8) = 5120` 个周期, 再加上移动处理的 256 个周期, 也就 5400 个周期不好, 看上去还挺宽裕的.
+
+家用游戏机上的经典游戏通常有 20 个左右的角色登场. 若对 20 个对象进行碰撞检测, 根据上面的计算方式, 需要 `(10 + 10 + 10 + 10) * 2 * (20 * 20) = 32000` 个周期, 这样就超过了 3 万周期的上限. 另外这里还没有考虑其他操作以及声音处理, 因此必须采取一些优化措施来降低所消耗的周期, 比如, 把"己方子弹之间不会发生碰撞", "敌方子弹与己方子弹不会发生碰撞" 等游戏内容考虑在内.
+
+当 CPU 运算能力不足时, 游戏画面的刷新率就会降低, 导致游戏中物体的运动变得迟缓, 导致游戏体验急剧下降.
+
+* 假设在家用游戏机中使用 RDBMS, 那么就必须通过 SQL 语句, 但是像 SELECT * from FlyingObjects 这样的语句, 单单判断语法是否正确就要消耗几百个 CPU 周期, 显然不现实. 游戏编程必须在 1 帧内完成坐标的判断和保存. 为此, 必须只通过组合 CPU 所具有的一些最原始的命令来实现, 只是读取数据就要花费几百个周期是相当不合理的. 因此, 在家用游戏机中, 基本不考虑使用 RDBMS 这种方式.
+
+### 3.1.5 无法预测玩家的操作--游戏状态千变万化(难以优化)
+
+### 3.1.6 必须将游戏数据放在 CPU 所在的机器上
+
+综合 3.1.4, 3.1.5, 3.1.6 , 游戏过程中的数据需要以非常快的速度不断变化, 所以这些数据必须在内存中进行管理. 在内存中进行管理的关键是注意 CPU 频率, 也就是要在几纳秒至几百纳秒的延迟内访问数据, 而光 1 纳秒也就前进 30 厘米的距离.
+
+也就是说, 游戏数据需要存放在距离 CPU 数十厘米以内的地方, 但是在实际中, 玩家通常分散在各处, 所以必然要在较远处和较近处之间冗余地保存数据, 以此保证数据的一致性, 这一点非常困难.
+
+## 3.2 网络游戏特有的要素
+
+### 3.2.1 通信延迟
+
+
+
+
 
