--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -172,6 +172,47 @@ MO  Multi-player Online
 
 ### 3.2.1 通信延迟
 
+### 3.2.2 带宽--传输量的标准
+
+### 3.2.3 服务器--成本, 服务器数量的估算
+
+### 3.2.4 安全性--网络游戏的弱点
+
+### 3.2.5 辅助系统
+
+## 3.3 物理架构详解
+
+### 3.3.1 基本的网络拓扑结构
+
+为了尽可能的降低通信延迟, 实际使用的有星型, 和全网状结构(full mesh).
+
+### 3.3.2 物理架构的总类
+
+### 3.3.3 C/S 架构--纯服务器型, 反射型
+
+反射型只进行数据包的交换, 并不检查其中的内容.
+
+### 3.3.4 P2P 架构
+
+P2P 架构有同步和异步两种方式, 同步方式有全网状结构和星型结构两种.
+
+### 3.3.5 C/S + P2P 混合型架构
+
+### 3.3.6 ad-hoc 模式
+
+## 3.4 逻辑架构详解
+
+### 3.4.1 MO, MMO 是什么? -- 同时在线数的区别
+
+### 3.4.2 MO 架构, MOG
+
+MO 架构经常在 FPS 和 RTS 等类型的游戏中使用.
+
+
+
+
+
+
 
 
 
