--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -32,3 +32,11 @@
 
 如同所有软件系统, 游戏引擎也是以软件层(software layer)构建的. 通常上层依赖下层, 下层不依赖上层. 当下层依赖上层时, 称为循环依赖(circular dependency). 在任何软件中, 循环依赖都要极力避免, 不然会导致系统间复杂的耦合(coupling), 也会使软件难以测试, 并妨碍代码重用.
 
+## 3 游戏软件工程基础
+
+### 3.1 重温 C++ 及最佳实践
+
+* 菱形继承问题(diamond problem)
+
+![菱形继承](https://raw.githubusercontent.com/21moons/memo/master/res/img/game_engine_architecture/菱形继承.png)
+<p align="center"><font size=2>图 3-2. 多重继承中的致命菱形</font></p>
