--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -38,5 +38,8 @@
 
 * 菱形继承问题(diamond problem)
 
+在菱形继承问题中, 一个派生类最终包含了两份祖父类. C++ 可以使用虚继承(virtual inheritance) 去掉重复祖父类的数据.
+
 ![菱形继承](https://raw.githubusercontent.com/21moons/memo/master/res/img/game_engine_architecture/菱形继承.png)
-<p align="center"><font size=2>图 3-2. 多重继承中的致命菱形</font></p>
+
+大多数 C++ 软件开发者都会完全避免使用多重继承, 或只容许有限制的使用. 常见的惯例是, 只容许从一个单继承层次结构中多重继承一些简单且无父的类. 这些类有时被称为`嵌入类`(mix-in class), 因为它可在类树中任何位置加入新功能. 
