--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -42,4 +42,83 @@
 
 ![菱形继承](https://raw.githubusercontent.com/21moons/memo/master/res/img/game_engine_architecture/菱形继承.png)
 
-大多数 C++ 软件开发者都会完全避免使用多重继承, 或只容许有限制的使用. 常见的惯例是, 只容许从一个单继承层次结构中多重继承一些简单且无父的类. 这些类有时被称为`嵌入类`(mix-in class), 因为它可在类树中任何位置加入新功能. 
+大多数 C++ 软件开发者都会完全避免使用多重继承, 或只容许有限制的使用. 常见的惯例是, 只容许从一个单继承层次结构中多重继承一些简单且无父的类. 这些类有时被称为`嵌入类`(mix-in class), 因为它可在类树中任何位置加入新功能.
+
+![嵌入类](https://raw.githubusercontent.com/21moons/memo/master/res/img/game_engine_architecture/嵌入类.png)
+
+* 多态(polymorphism)
+多态是一种语言特征, 允许采用单一共同接口操作一组不同类型的对象. 共同接口能使异质的(heterogeneous) 对象集合从使用接口的代码来看显得是同质的(homogeneous).
+
+例如, 一个二维绘图程序要把一个形状绘制到屏幕上, 列表里有不同的形状. 绘出这个异质形状集合中的其中一个方法是, 按不同的形状类型, 用 switch 语句区分并执行不同的绘图指令.
+
+``` Cpp
+void drawShapes(std::list<Shape*> shapes)
+{
+  std::list<Shape*>::iterator shapeItr = shapes.begin();
+  std::list<Shape*>::iterator shapeEnd = shapes.end();
+
+  for(; shapeItr != shapeEnd; ++shapeItr)
+  {
+    switch ((*shapeItr)->mType)
+    {
+      case CIRCLE:
+        // 绘制图形
+        break;
+      case RECTANGLE:
+        // 绘制矩形
+        break;
+      case TRIANGLE:
+        // 绘制三角形
+        break;
+      // ......
+    }
+  }
+}
+```
+
+这种方法的问题是, drawShapes() 函数需要知悉所有可以绘画的形状类型. 在简单例子里还好, 但随着代码量的增加和代码复杂度的提高, 在系统里新增形状类型变得越来越困难. 每当加入一个新类型系统, 必须搜索并修改所有"知悉"各种形状类型的代码.
+
+解决方法是把类型的内容从大部分代码中隔离出来, 为了实施这个隔离, 可以把每种要支持的形状定义为类. 而所有这些类, 都继承自一个共同的基类 shape. 在基类 Shape 中可以定义名为 Draw() 的虚函数(C++ 语言的多态机制), 并在每个不同形状的类中, 以不同方式实现这个函数. 绘画时不需要"知悉"给予的是何种形状, 只需逐一简单的调用形状对象的 Draw() 函数.
+
+``` Cpp
+struct Shape
+{
+  virtual void Draw() = 0;   //纯虚函数
+};
+
+struct Circle : public Shape
+{
+  virtual void Draw()
+  {
+    // 绘制图形
+  }
+};
+
+struct Rectangle : public Shape
+{
+  virtual void Draw()
+  {
+    // 绘制矩形
+  }
+};
+
+struct Triangle : public Shape
+{
+  virtual void Draw()
+  {
+    // 绘制三角形
+  }
+};
+
+void drawShapes(std::list<Shape*> shapes)
+{
+  std::list<Shape*>::iterator shapeItr = shapes.begin();
+  std::list<Shape*>::iterator shapeEnd = shapes.end();
+
+  for(; shapeItr != shapeEnd; ++shapeItr)
+  {
+    (*shapeItr)->Draw();
+  }
+}
+```
+
