--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -122,3 +122,9 @@ void drawShapes(std::list<Shape*> shapes)
 }
 ```
 
+* 合成(composition)及聚合(aggregation)
+
+合成是指用一组互动的对象去完成高阶任务. 合成在类之间建立"有一个(has-a)" 和 "用一个(use-a)" 的关系. (从技术上讲, "有一个"的关系称为合成, "用一个"的关系称为聚合). 缺乏面向对象经验的程序员常会过分依赖继承, 而忽视合成及聚合.
+
+例如, 要设计一个图形界面用作游戏的前端, 假设定义了 window 类表示任何长方形的 GUI 元素, 另外也定义了 Rectangle 类封装数学上的长方形概念. 缺乏对经验的程序员可能会从 Rectangle 类派生出 window 类(window "是一个" Rectangle). 但一个更具弹性及封装更好的方法是, window 类引用或包含一个 Rectangle 类("用一个" 或 "有一个" 的关系). 这样, 每个类变得更简单, 更专注, 也更容易被测试, 调试, 重用.
+
