--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -276,12 +276,36 @@ MMO 架构就是"在大量玩家之间共享长期存在的游戏过程", 对于
 此外, 在同步和异步方式下, 参与游戏的所有终端都共享游戏过程中的所有数据, 而在浏览器模式下, 管理游戏数据的只有服务器, 游戏逻辑全部都在服务器上实现, 各个终端(浏览器)只展现当前玩家操作在游戏世界中产生的结果.
 
 * MMO 架构的实现方针--浏览器方式(这里的浏览器不是指 web 浏览器), 纯粹的 C/S 模式
-1. 为了支持大量玩家同时在线, 必须使用异步的方式, 客户端与服务器的通信要考虑能够忍受较大通信延迟和不稳定的连接.
-2. 客户端必须使用浏览器的方式实现, 只包含与渲染, 音效以及操作有关的处理, 将数据统一保存在服务器上, 从而避免大量玩家在线可能导致的巨量数据传输. 就算不启动客户端, 游戏也会在服务器上持续运行.
+1. 为了支持大量玩家同时在线, 必须放弃 MM 架构中的同步/异步方式(将游戏进行时的状态变化传输给所有的玩家).
+2. 大量玩家在线触发的巨量运算很容易就会导致服务器瘫痪, 因此, 为了支持更多的玩家同时在线, 必须对服务器进行减负. 客户端使用浏览器的方式实现, 只包含与渲染, 音效以及操作有关的处理, 仅将逻辑处理和玩家数据持久化放在服务器上. 客户端与服务器通信的数据量要尽可能的少, 并且能够忍受较大通信延迟和不稳定的连接. 就算不启动客户端, 游戏也会在服务器上持续运行.
+3. 因为所有的逻辑都是在服务器进行依次处理的, 所以玩家之间不会出现不一致的状态, 但是在通信延迟过长的情况下, 画面会变得不连贯
 
+客户端与服务器的交互可以简化为: 客户端发送玩家操作 -> 服务器进行处理 -> 将处理结果显示在客户端
 
+```
+专栏--设法改善网页游戏的画面显示间隔
+假设网络延迟为 200 毫秒, 实际移动需要 500 毫秒, 在网页游戏中事件的发生顺序为:
+* 0 毫秒: 玩家开始移动(移动到坐标 XY 处)
+* 0 毫秒: 操作信息开始向服务器发送
+* 200 毫秒: 消息到达服务器
+* 205 毫秒: 服务器处理结束, 将结果(移动开始)发送给客户端
+* 405 毫秒: "移动开始" 的消息到达客户端, 开始进行渲染
+* 905 毫秒: 移动画面渲染结束
 
+在这种方式下, 玩家在操作后大约 400 毫秒之后, 角色才会开始移动, 从我们的感觉来看, 这种效果实在太差了, 只要将事件发生顺序更改为如下形式就能改善操作时的体验.
+* 0 毫秒: 玩家开始移动(移动到坐标 XY 处)
+* 0 毫秒: 操作信息开始向服务器发送
+* 0 毫秒: 客户端并不等待服务器送来的结果信息, 立即开始渲染移动画面
+* 200 毫秒: 消息到达服务器
+* 205 毫秒: 服务器处理结束, 将结果(移动开始)发送给客户端
+* 405 毫秒: "移动开始" 的消息到达客户端, 如果移动成功则忽略该消息
+* 500 毫秒: 移动画面渲染结束
 
+这样就将完成移动所需的 905 毫秒缩短到了 500 毫秒, 由此玩家就能感觉到自己的角色在很流畅的移动.
+这里的问题是, 如果服务器发回了"移动失败"的消息, 就需要立即回到原本的位置, 否则游戏状态会不一致, 导致后续操作出现问题.
+```
+
+# 4 [实现]C/S MMO 游戏开发--长期运行的游戏服务器
 
 
 
