--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -307,6 +307,48 @@ MMO 架构就是"在大量玩家之间共享长期存在的游戏过程", 对于
 
 # 4 [实现]C/S MMO 游戏开发--长期运行的游戏服务器
 
+## 4.1 网络游戏开发的基本流程
+
+### 4.1.1 项目文档/交付物
+
+保证团队工作内容一致
+
+| 类别 | 名称 | 目的 | 内容 |
+| ------ | ------ | ------ | ------ |
+| 策划文档 | 概要设计文档 | 用于让出资方判断项目可行性以及用于原型开发 | 包括游戏内容, 基本规则, 游戏主要元素, 平台以及商业模式 |
+| 策划文档 | 详细设计文档(规格说明书) | 用于指导开发人员进行设计 | 此文档包含的信息与游戏攻略, 游戏说明中的内容相同. 以此为基础可以决定以怎样的方式编写代码, 如何开始进行设计工作. |
+| 策划文档 | 开发要素/工作量列表 | 用于估算开发成本, 制定准确度较高的计划 | 罗列出所有必须实现的功能, 确定没有遗漏的状态, 对工作量进行量化 |
+| 设计文档 | 系统基本结构图 | 服务器设计概要 | 为了进行进程关系图和资源的设计,将所需的设计方针可视化 |
+| 设计文档 | 进程关系图 | 提高设计正确性, 筹备服务器, 构建系统 | 列出服务器及客户端的所有进程的信息, 包括进程数量, 关联性, 网络连接应有的状态, 连接顺序, 访问模式, 扩展方式 |
+| 设计文档 | 服务器物理结构概要图 | 用于将如何配置服务器告知系统运维公司, 以及用于详细设计 | 以图形方式来说明具有某种特性的服务器必须以什么样的物理关系来配置 |
+| 设计文档 | 带宽/设备资源估算文档 | 用于古色所需筹备的服务器, 传输线路, 存储设备等的成本 | 从技术层面上估算需要具备哪些类型的服务器, 各自需要多少台, 可用性需要达到何种程度 |
+| 设计文档 | 协议定义文档 | 用于定义传输内容, 以及提高服务器和客户端并行开发的效率 | 记录了需要再客户端和服务器之间进行传输的数据包的内容 |
+| 设计文档 | 数据库设计图 | 用于实现数据库 | 为了避免在运营之后突然出现数据库性能问题, 需要对数据库的查询语句进行规划 |
+| 设计文档 | 系统运维设计文档 | 用于实际构建物理服务器系统 | 服务器需要具备怎样的性能, 应在何时购买, 购买几台, 如何进行配置, 连接, 设置 |
+| 商业相关文档 | 合同 | 用于防范投资方, 开发方, 运营方出现交易纠纷 |  |
+| 商业相关文档 | 商业计划书 | 用于判断投资计划的可行性 | 根据过去的经验来预估初期开发, 乃至运营开始后 2-3 年之内的动向 |
+| 商业相关文档 | 开发日程 | 用于把握整体的开发进度 | 开发计划的制定 |
+| 商业相关文档 | 开发体制图 | 用于确认开发流程是否正常 | 对公司外部的人员说明己方的开发体制 |
+
+### 4.1.2 开发进行和文档准备的流程
+
+### 4.1.3 技术人员的文档/交付物
+
+## 4.2 C/S MMO 游戏的发展趋势和对策
+
+C/S MMO 架构特点:
+1. 支持大量数据的处理
+2. 向玩家严格保密设定信息
+3. 严格维护游戏数据的更改内容, 屏蔽非法操作
+4. 简单的进行设定信息的更改
+5. 易于与其他服务系统结合
+
+C/S MMO 架构限制:
+1. 延迟较大
+2. 游戏服务器带宽负荷很高
+3. 游戏服务器维护费用高
+4. 服务器维护期间无法进行游戏
+
 
 
 
